[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "RSA_pac"
version = "0.0.1"
authors = [  { name="RSA_p" },]
description = "make a RSA info"
license = {text = "MIT License"}
requires-python = ">=3.8.5"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    ]
dependencies = ["sympy"]